Bootswatch United theme

--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -10,15 +10,21 @@
     <link rel="stylesheet" type="text/css" href="/mneme.css" media="all">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" media="all">
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="all">
+    <link rel="stylesheet" type="text/css"
+      href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.0/united/bootstrap.min.css" media="all">
 
     <style type='text/css'>
       body {
         text-align: center;
-        font-family: sans-serif;
+      }
+
+      label {
+        position: relative;
+        font-size: 20px;
       }
 
       .page-header {
